# ucas-oop

./: .gitignore  .gitmodules  README.md  服务化软件发展特征与演进.docx
Project/: AGENTS.md  FRAMEWORK_SUMMARY.md  README.md  diffusers  pyproject.toml  test_strategy_pattern.py  theme.typ
Project/diffusers/examples/community/: wan_camera_control_example.py
Project/diffusers/examples/tests/: BUILDER_MIGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README_BUILDER.md  demo_builder_usage.py  test_builder_parity.py  test_builder_unit.py
Project/diffusers/examples/unconditional_image_generation/: README.md  perflow_inference.py  train_unconditional.py
Project/diffusers/src/diffusers/: __init__.py
Project/diffusers/tests/fixtures/: generate_perflow_fixture.py  perflow_fixture.pt
Project/diffusers/tests/schedulers/: test_perflow_parity.py  test_pfode_solver.py  test_scheduler_perflow.py  test_utils_perflow.py
Project/docs/: IMPLEMENTATION_SUMMARY.md  PERFLOW_IMPLEMENTATION_COMPLETE.md  PERFLOW_IMPLEMENTATION_PLAN.md  PERFLOW_MODIFICATION_SUMMARY.md  PLANTUML_DIAGRAMS_README.md  REFACTORING_STRATEGY_PATTERN.md  TASK_COMPLETION_SUMMARY.md  WAN_FUN_CONTROL_IMPLEMENTATION.md  attention_strategy_pattern.puml  attention_strategy_sequence.puml
Project/docs/raw/report0/: slide.typ  system_analysis_design_report_week7-8.md
Project/docs/raw/report1/: QUICK_REFERENCE.md  (+4 more)
Project/report0/: meta.typ  perflow.md  report.md  wan_fun_control.md
Project/tests/: dump_features.py  dump_features.sh
Project/tests/fixtures/: wan21_fun_v11_control_camera.json  wan21_fun_v11_control_camera.pt
(+38 files in other folders)
