[project]
name = "project"
version = "0.1.0"
description = "project for extending diffusers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers[dev]",
    "scipy>=1.16.3",
    "torch>=2.9.1",
]

[tool.uv.sources]
diffusers = { path = "diffusers", editable = true }

[tool.basedpyright]
typeCheckingMode = "basic"
include = [
    "diffusers/",
]
exclude = [
    "**/.venv",
    "**/build",
    "**/dist",
    "docs",
]
strict = []
reportMissingImports = "warning"